# smartcare

./: .gitignore  CLAUDE.md  README.md  package-lock.json
docs/: feishu-guide.md  (+1 more)
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 9a288366c564_add_task_completion_status_to_health_.py  a3f2d1e8c047_add_registration_module.py  c1b7c3f4a9d2_add_password_hash_to_users.py  d4e5f6a7b8c9_split_skills_tools_and_mcp.py  e7f8a9b0c1d2_harden_consultation_runs.py
services/api/app/: main.py
services/api/app/core/: concurrency.py  config.py  database.py  llm.py  logging_config.py  observability.py  rate_limit.py  retry.py
services/api/app/eval/: evaluator.py  runner.py  test_cases.json
services/api/app/jobs/: proactive_intervention.py  scheduled_task_runner.py
services/api/app/mcp/: __init__.py  client.py  manager.py  policy.py
services/api/app/models/: __init__.py  models.py
services/api/app/orchestrators/: agents.py  consultation.py
services/api/scripts/: backfill_messages.py  batch_index.py  check_mcp_health.py  rag_benchmark.py  seed_registration.py  simulate_iot_webhook.py
services/api/tests/: conftest.py  locustfile.py  test_checkpoint_recovery.py  test_conversation_messages.py  test_document_context_risk.py  test_extension_runtime.py  test_health.py  test_llm_retry.py  test_m0_baseline.py  test_m1_privacy.py  test_p0_hardening.py  test_rag_image_upload.py  test_rag_rbac.py  test_rag_retriever.py  test_scheduled_and_feishu.py  test_upload.py
(+139 files in other folders)
